# garakuta

./: .gitignore  README.md  simd-sum.c
NativeSEGV/: CMakeLists.txt  Makefile  NativeSEGV.c  NativeSEGV.java  README.md
NativeSEGV/container/: Dockerfile
NativeSEGV/ffm/: SegvInFFM.java  SegvInGettimeofdayWithFFM.java
NativeSEGV/ffm/upcall/: pom.xml
NativeSEGV/ffm/upcall/src/main/java/com/yasuenag/garakuta/nativesegv/upcall/: Main.java
NativeSEGV/frameless/: Makefile  SegvInFrameless.java  segv.s
NativeStackOverflow/: CMakeLists.txt  Makefile  NativeOverflow-aarch64.s  NativeOverflow-x86_64.s  NativeOverflow.c  NativeStackOverflow.java  README.md
NativeStackOverflow/ffm/: pom.xml
NativeStackOverflow/ffm/src/main/java/com/yasuenag/garakuta/nativestackoverflow/: Main.java
aot-jlink/: README.md  pom.xml
check-hybrid-cores/: README.md  hy-core-check.c
class_unload/: Main.java
disas-with-hsdis/: README.md  pom.xml
ek-deployment/: README.md  es-kibana-deployment.yml
ffm-cpumodel/: README.md  pom.xml
ffm-objfile-runner/: README.md  pom.xml
ffm-upcall-to-virtualmethod/: README.md  pom.xml
freq/: README.md  freq.c
java-deadlock-detector/: CMakeLists.txt  README.md  dldetector.cpp  dldetector.hpp
jvmci-jmp/: Makefile  README.md  disas-args.conf  module-args.conf  pom.xml  printasm-directive.json
libbpf-tty-snooper/: README.md
libbpf-tty-snooper/co-re/rust/: Cargo.toml  build.rs
libbpf-tty-snooper/co-re/rust/src/: main.rs
llvm-ffm/: LLVMJit.java  README.md  Test.java
nabeatsu/: README.md  common.cpp  common.h
nabeatsu/ocl/: CMakeLists.txt  Makefile  nabeatsu.cl  nabeatsu.cpp
oop/: Makefile  OopInspectTest.java  README.md  ooptest.c
randbench/: README.md  pom.xml
randminmax/: pom.xml
sigforce/: Makefile  README.md  pom.xml  sigforce.cpp
trjfr/: README.md  pom.xml
(+110 files in other folders)
